Run tests for Python 2

--- a/tox.ini
+++ b/tox.ini
@@ -1,9 +1,10 @@
 [tox]
-envlist = py{34,35,36}-celery{3,4}, lint
+envlist = py{27,34,35,36}-celery{3,4}, lint
 
 [testenv]
 deps =
     -rrequirements/test.txt
+    py27: mock
     celery3: -rrequirements/celery3.txt
     celery4: -rrequirements/celery4.txt
 commands =
