Explicitly support promclient >= 0.4. Closes #39.

--- a/tox.ini
+++ b/tox.ini
@@ -1,14 +1,16 @@
 [tox]
-envlist = py{27,34,35,36,37}-celery{3,4}, lint
+envlist = py{27,34,35,36,37}-celery{3,4}-promclient{030,050}, lint
 
 [testenv]
 deps =
     -rrequirements/test.txt
     py27: mock
+    promclient030: -rrequirements/promclient030.txt
+    promclient050: -rrequirements/promclient050.txt
     celery3: -rrequirements/celery3.txt
     celery4: -rrequirements/celery4.txt
 commands =
-    coverage run -m py.test {toxinidir}/test/
+    coverage run -m py.test -s -v {toxinidir}/test/
     coverage report
 
 [testenv:lint]
