Update Dockerfiles to new requirement-structure

--- a/Dockerfile-celery3
+++ b/Dockerfile-celery3
@@ -1,4 +1,4 @@
-FROM python:3.5-alpine
+FROM python:3.6-alpine
 MAINTAINER Horst Gutmann <horst@zerokspot.com>
 
 RUN mkdir -p /app/requirements
@@ -6,7 +6,7 @@ ADD requirements/* /app/requirements/
 WORKDIR /app
 
 ENV PYTHONUNBUFFERED 1
-RUN pip install -r requirements/celery3.txt
+RUN pip install -r requirements/promclient050.txt -r requirements/celery3.txt
 ADD celery_prometheus_exporter.py docker-entrypoint.sh /app/
 ENTRYPOINT ["/bin/sh", "/app/docker-entrypoint.sh"]
 CMD []
